# air

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backends/: base_backend.py
compiler/: air_ast.py  air_parser.py  ast_builder.py  cfg.py  cfg_builder.py  cli.py  egir.py  egir_builder.py  egir_serializer.py  semantic_check.py  validate_air.py
examples/: aurora.air  example_1.air  example_1.egir.json  example_3.air  example_4.air  example_6.air  example_7.air
runtime/: adapters.py  agent_vm.py  aggregate_executor.py  asset_resolver.py  callbacks.py  config.py  decision_executor.py  edge_resolver.py  gate_executor.py  governance.py  llm_executor.py  llm_utils.py  map_executor.py  run_workflow.py  session_executor.py  tool_executor.py  tracer.py  transform_executor.py  validator.py  variable_scope.py  verify_executor.py  workflow_loader.py  workflow_runner.py
spec/: 01_air_language_spec_v0_1_0.md  02_air_ast_spec_v0_1_0.md  03_air_cfg_spec_v0_1_0.md  04_air_egir_spec_v0_1_0.md  04_air_graph_spec_v0_1_0.md  05_egir_json_schema_v0_1_0.md  06_agent_vm_spec_v0_1_0.md  egir.schema.json
tests/: conftest.py  helpers.py  strategies_bedrock.py  test_air_graph.py  test_asset_resolver.py  test_ast_builder.py  test_bedrock_backend.py  test_bedrock_backend_properties.py  test_bedrock_integration.py  test_cfg_builder.py  test_cli.py  test_config.py  test_decision_executor.py  test_edge_resolver.py  test_governance.py  test_grammar.py  test_langgraph_backend.py  test_llm_executor.py  test_map_executor.py  test_sdk_aggregate.py  test_sdk_decide.py  test_sdk_gate.py  (+11 more)
(+86 files in other folders)
