[project]
name = "air"
version = "0.1.0"
description = "AIR — Agentic Intermediate Representation compiler"
requires-python = ">=3.12"
dependencies = [
    "lark",
    "jsonschema",
]

[project.scripts]
air = "compiler.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["compiler*", "runtime*", "backends*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests", "compiler"]
